moved controllers, mocks, models in their own folders
