# docs/swagger.yaml
@@ -1,6 +1,6 @@
 basePath: /api/v1
 definitions:
-  main.Book:
+  models.Book:
     properties:
       author:
         type: string
@@ -15,7 +15,7 @@ definitions:
       title:
         type: string
     type: object
-  main.ErrorResponse:
+  models.ErrorResponse:
     properties:
       message:
         type: string
@@ -50,12 +50,12 @@ paths:
           description: OK
           schema:
             items:
-              $ref: '#/definitions/main.Book'
+              $ref: '#/definitions/models.Book'
             type: array
         "500":
           description: Internal Server Error
           schema:
-            $ref: '#/definitions/main.ErrorResponse'
+            $ref: '#/definitions/models.ErrorResponse'
       summary: Get list of books
     post:
       consumes:
@@ -68,18 +68,18 @@ paths:
         name: book
         required: true
         schema:
-          $ref: '#/definitions/main.Book'
+          $ref: '#/definitions/models.Book'
       produces:
       - application/json
       responses:
         "201":
           description: Created
           schema:
-            $ref: '#/definitions/main.Book'
+            $ref: '#/definitions/models.Book'
         "400":
           description: Bad Request
           schema:
-            $ref: '#/definitions/main.ErrorResponse'
+            $ref: '#/definitions/models.ErrorResponse'
       summary: Add a new book
   /books/{id}:
     delete:
@@ -101,7 +101,7 @@ paths:
         "404":
           description: Not Found
           schema:
-            $ref: '#/definitions/main.ErrorResponse'
+            $ref: '#/definitions/models.ErrorResponse'
       summary: Remove a book
     get:
       description: Get a book by ID
@@ -118,11 +118,11 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/main.Book'
+            $ref: '#/definitions/models.Book'
         "404":
           description: Not Found
           schema:
-            $ref: '#/definitions/main.ErrorResponse'
+            $ref: '#/definitions/models.ErrorResponse'
       summary: Get a book by ID
     patch:
       description: Update book availability
@@ -139,11 +139,11 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/main.Book'
+            $ref: '#/definitions/models.Book'
         "404":
           description: Not Found
           schema:
-            $ref: '#/definitions/main.ErrorResponse'
+            $ref: '#/definitions/models.ErrorResponse'
       summary: Update book availability
 securityDefinitions:
   BasicAuth:
