# models/common.go
@@ -1,0 +1,6 @@
+package models
+
+type ErrorResponse struct {
+	Message string `json:"message"`
+	Status  int    `json:"status"`
+}
